
add_subdirectory(Turnigy-Accucel-6-50W-5A)
add_subdirectory(Dual-Power-B6AC-80W-RC)
add_subdirectory(imaxB6-clone)
add_subdirectory(Turnigy-A-6-10-200W)
add_subdirectory(Turnigy-Accucel-8-150W-7A)
add_subdirectory(GTPowerA6-10-original)
add_subdirectory(imaxB6-original)
add_subdirectory(Turnigy-MEGA-400Wx2)

